# satisfactory-optimizer

./: CMakeLists.txt  README.md
include/: RecipeDefinition.hpp  RecipeName.hpp  ResourceName.hpp
src/: optimizer.cpp
